[package]
name = "fromelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[[bin]]
name = "main"
required-features = [ "pretty_env_logger" ]

[features]
default = [ "pretty_env_logger" ]

[dependencies]
object = { version = "0.30", default-features = false, features = [ "elf", "read" ] }
log = "0.4"
pretty_env_logger = { version = "0.4", optional = true }